--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,12 @@
     <string name="app_name">RecyclingReminder</string>
     <string name="sign_up_string">Sign Up</string>
     <string name="as_homeowner_string">As Homeowner</string>
+    <string name="as_garbage_collector_string">As Garbage Collector</string>
     <string name="name_string">Name</string>
     <string name="address_string">Address</string>
     <string name="phone_number_string">Phone Number</string>
+    <string name="employee_id_string">Employee ID</string>
+    <string name="register_string">Register</string>
+    <string name="password_string">Password</string>
+    <string name="email_string">Email</string>
 </resources>
