--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,12 @@
     <string name="register_string">Register</string>
     <string name="password_string">Password</string>
     <string name="email_string">Email</string>
+    <string name="title_activity_garbage_collector_dashboard">Map</string>
+    <string name="login">LOGIN</string>
+    <string name="as_garbage_collector">As Garbage Collector</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="loginButton1">Login</string>
+    <string name="loginTitle">LOGIN</string>
+    <string name="loginButton">Login</string>
 </resources>
