Got Google Maps to show on GarbageCollector Dashboard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="loginButton1">Login</string>
     <string name="loginTitle">LOGIN</string>
     <string name="loginButton">Login</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
