--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="loginButton">Login</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_edit_homeowner">EditHomeownerActivity</string>
+    <string name="map">Map</string>
 </resources>
